<resources>
    <string name="app_name">Registrations</string>
    <string name="jdl">Registration</string>
    <string name="nm">Nama</string>
    <string name="alt">Alamat</string>
    <string name="Date">Tanggal</string>
    <string name="btn">Daftar</string>
    <string name="hsl">Iki Tampilan Hasil!!</string>
    <string name="namadpn">Nama Depan</string>
    <string name="namablkng">Nama Belakang</string>
    <string name="lahir">Tempat Lahir</string>
    <string name="tlp">Telefon</string>
    <string name="em">Email</string>
    <string name="Ps">Password</string>
    <string name="mp">Masukan Password Kembali</string>
    <string name="tgl">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="l">Laki-Laki</string>
    <string name="p">Perempuan</string>
    <string name="agm">Agama</string>
    <string name="i">Islam</string>
    <string name="kr">Kristen</string>
    <string name="ka">Katholik</string>
    <string name="hi">Hindu</string>
    <string name="bd">Buddha</string>
    <string name="kh">Konghucu</string>
    <string name="kp">Aliran Kepercayaan</string>
    <string name="kb">KEMBALI</string>
    <string name="df">DAFTAR</string>
</resources>
